--- a/css/custom.scss
+++ b/css/custom.scss
@@ -15,30 +15,33 @@ $red: #b82525;
         box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.50);
       }
     }
+    //
+    //h1, h2, h3, h4, h5, & {
+    //  color: $near-black;
+    //  font-weight: 300 !important;
+    //}
+    //
+    //h1, h2, h3, h4 {
+    //  font-family: "papaya_sunriseregular", serif;
+    //  line-height: 2em;
+    //}
+    //
+    //
+    //h5 {
+    //  font-weight: 400 !important;
+    //  font-size: 50px;
+    //  font-family: "Open Sans", serif;
+    //}
+    //
+    //h1, h2 {
+    //  font-weight: 600 !important;
+    //}
+    //
+    //font-size: 45px;
+    //font-family: "Open Sans", serif;
 
-    h1, h2, h3, h4, h5, & {
-      color: $near-black;
-      font-weight: 300 !important;
-    }
-
-    h1, h2, h3, h4 {
-      font-family: "papaya_sunriseregular", serif;
-      line-height: 2em;
-    }
 
 
-    h5 {
-      font-weight: 400 !important;
-      font-size: 50px;
-      font-family: "Open Sans", serif;
-    }
-
-    h1, h2 {
-      font-weight: 600 !important;
-    }
-
-    font-size: 45px;
-    font-family: "Open Sans", serif;
 
     ul {
       list-style: none;
@@ -110,25 +113,29 @@ $red: #b82525;
     }
 
     code {
-      padding: 20px;
-      max-height: 1500px;
-      font-size: 30px;
-      line-height: 35px;
+      font-size: 1.5em;
+      line-height: 1.2em;
       overflow: hidden;
       font-family: Menlo, monospace;
-
-      span.grayed {
-        &, .hljs-title, .hljs-keyword, .hljs-string {
-          color: gray !important;
-        }
-      }
+      max-height: 1000px;
+      background-color: #191919;
     }
 
-    &.fullscreen {
-      code {
-        font-size: 35px;
-        line-height: 40px;
-      }
+    pre {
+      box-shadow: none;
+    }
+
+    .neon {
+      color: #f3fffd;
+      font-family: neoneonregular, monospace;
+      -webkit-animation: neon 1.5s ease-in-out infinite alternate;
+      -moz-animation: neon 1.5s ease-in-out infinite alternate;
+      animation: neon 1.5s ease-in-out infinite alternate;
+      font-size: 5em;
+      padding-top: 70px;
+      text-align: center;
+      margin-top: -60px;
+      text-decoration: none;
     }
   }
 }
@@ -144,5 +151,14 @@ $red: #b82525;
     color: rgba(0, 0, 0, 0.56);
     text-decoration: none;
 
+  }
+}
+
+@keyframes neon {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #228DFF, 0 0 70px #228DFF, 0 0 80px #228DFF, 0 0 100px #228DFF, 0 0 150px #228DFF;
+  }
+  to {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #228DFF, 0 0 35px #228DFF, 0 0 40px #228DFF, 0 0 50px #228DFF, 0 0 75px #228DFF;
   }
 }
