--- a/font/font.css
+++ b/font/font.css
@@ -88,24 +88,6 @@
     url('open-sans-v17-cyrillic-ext_latin-800italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('open-sans-v17-cyrillic-ext_latin-800italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
-/* caveat-regular - cyrillic-ext_latin */
-@font-face {
-    font-family: 'Caveat';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Caveat Regular'), local('Caveat-Regular'),
-    url('caveat-v7-cyrillic-ext_latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('caveat-v7-cyrillic-ext_latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/* caveat-700 - cyrillic-ext_latin */
-@font-face {
-    font-family: 'Caveat';
-    font-style: normal;
-    font-weight: 700;
-    src: local('Caveat Bold'), local('Caveat-Bold'),
-    url('caveat-v7-cyrillic-ext_latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('caveat-v7-cyrillic-ext_latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
 @font-face {
     font-family: 'papaya_sunriseregular';
     src: url('papaya_sunrise_d.woff2') format('woff2'),
@@ -115,19 +97,14 @@
 }
 
 @font-face {
-    font-family: 'font_awesome';
-    src: url('fa-solid-900.woff2') format('woff2'),
-    url('fa-solid-900.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-
-@font-face {
     font-family: 'neoneonregular';
     src: url('neoneon-webfont.woff2') format('woff2'),
     url('neoneon-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+}
 
+@font-face {
+    font-family: Menlo;
+    src: url('./Menlo-Regular.ttf');
 }
