--- a/css/custom.css
+++ b/css/custom.css
@@ -3,8 +3,9 @@
   background: none;
   box-shadow: none;
   margin: 0; }
-  .reveal section img.shadow {
-    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.5); }
+
+.reveal section h1, .reveal section h2, .reveal section h3, .reveal section h4, .reveal section h5, .reveal section {
+  color: #e0d8b3; }
 
 .reveal section ul {
   list-style: none;
@@ -16,9 +17,6 @@
     left: -25px; }
   .reveal section ul li {
     padding-bottom: 15px; }
-
-.reveal section .accent {
-  color: #b82525; }
 
 .reveal section #info {
   padding-top: 100px; }
@@ -65,7 +63,7 @@
     border-radius: 0;
     padding-right: 5px; }
   .reveal section #info a {
-    color: #210008; }
+    color: #e0d8b3; }
 
 .reveal section code {
   font-size: 1.5em;
@@ -88,6 +86,23 @@
   text-align: center;
   margin-top: -60px;
   text-decoration: none; }
+
+.reveal section .center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+.reveal section .news-paper {
+  height: 700px;
+  position: relative; }
+  .reveal section .news-paper img {
+    box-shadow: 3px -4px 19px 0px rgba(0, 0, 0, 0.75); }
 
 #credits {
   display: none;
