--- a/css/custom.scss
+++ b/css/custom.scss
@@ -1,4 +1,4 @@
-$near-black: rgb(33, 0, 8);
+$main: #e0d8b3;
 $red: #b82525;
 
 .reveal {
@@ -8,40 +8,11 @@ $red: #b82525;
       background: none;
       box-shadow: none;
       margin: 0;
-
-      &.shadow {
-        -webkit-box-shadow: 0px 0px 18px 5px rgba(0, 0, 0, 0.75);
-        -moz-box-shadow: 0px 0px 18px 5px rgba(0, 0, 0, 0.75);
-        box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.50);
-      }
     }
-    //
-    //h1, h2, h3, h4, h5, & {
-    //  color: $near-black;
-    //  font-weight: 300 !important;
-    //}
-    //
-    //h1, h2, h3, h4 {
-    //  font-family: "papaya_sunriseregular", serif;
-    //  line-height: 2em;
-    //}
-    //
-    //
-    //h5 {
-    //  font-weight: 400 !important;
-    //  font-size: 50px;
-    //  font-family: "Open Sans", serif;
-    //}
-    //
-    //h1, h2 {
-    //  font-weight: 600 !important;
-    //}
-    //
-    //font-size: 45px;
-    //font-family: "Open Sans", serif;
 
-
-
+    h1, h2, h3, h4, h5, & {
+      color: $main;
+    }
 
     ul {
       list-style: none;
@@ -57,10 +28,6 @@ $red: #b82525;
       li {
         padding-bottom: 15px;
       }
-    }
-
-    .accent {
-      color: $red;
     }
 
     #info {
@@ -108,7 +75,7 @@ $red: #b82525;
       }
 
       a {
-        color: $near-black;
+        color: $main;
       }
     }
 
@@ -136,6 +103,22 @@ $red: #b82525;
       text-align: center;
       margin-top: -60px;
       text-decoration: none;
+    }
+
+    .center {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .news-paper {
+      img {
+        -webkit-box-shadow: 3px -4px 19px 0px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 3px -4px 19px 0px rgba(0, 0, 0, 0.75);
+        box-shadow: 3px -4px 19px 0px rgba(0, 0, 0, 0.75);
+      }
+      height: 700px;
+      position: relative;
     }
   }
 }
