--- a/css/custom.css
+++ b/css/custom.css
@@ -140,6 +140,10 @@
   .reveal section .chart.line-chart .ct-legend .ct-series-2:before {
     background-color: #D5A976;
     border-color: #D5A976; }
+  .reveal div.slide-background.present[data-background-hash="img/atomic.jpgnullnullnullnullnullnullnullnullnull"] {
+    opacity: 0;
+    -webkit-animation: fadein 5s forwards;
+            animation: fadein 5s forwards; }
 
 #credits {
   display: none;
@@ -162,3 +166,15 @@
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #228DFF, 0 0 70px #228DFF, 0 0 80px #228DFF, 0 0 100px #228DFF, 0 0 150px #228DFF; }
   to {
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #228DFF, 0 0 35px #228DFF, 0 0 40px #228DFF, 0 0 50px #228DFF, 0 0 75px #228DFF; } }
+
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@keyframes fadein {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
