--- a/css/custom.scss
+++ b/css/custom.scss
@@ -200,8 +200,7 @@ $red: #b82525;
       }
     }
   }
-
-  div.slide-background.present[data-background-hash="img/atomic.jpgnullnullnullnullnullnullnullnullnull"] {
+  div.slide-background.present[data-background-hash="img/atomic.jpgnullimg/atomic.jpgnullnullnullnullnullnullnull"] {
     opacity: 0;
     animation: fadein 5s forwards;
   }
