--- a/css/custom.css
+++ b/css/custom.css
@@ -140,7 +140,7 @@
   .reveal section .chart.line-chart .ct-legend .ct-series-2:before {
     background-color: #D5A976;
     border-color: #D5A976; }
-  .reveal div.slide-background.present[data-background-hash="img/atomic.jpgnullnullnullnullnullnullnullnullnull"] {
+  .reveal div.slide-background.present[data-background-hash="img/atomic.jpgnullimg/atomic.jpgnullnullnullnullnullnullnull"] {
     opacity: 0;
     -webkit-animation: fadein 5s forwards;
             animation: fadein 5s forwards; }
