--- a/css/custom.scss
+++ b/css/custom.scss
@@ -80,18 +80,24 @@ $red: #b82525;
       }
     }
 
-    code {
-      font-size: 1.5em;
-      line-height: 1.2em;
-      overflow: hidden;
-      font-family: Menlo, monospace;
-      max-height: 1000px;
-      background-color: #191919;
+
+    .fullscreen {
+      pre {
+        box-shadow: none;
+        margin: 0;
+        padding: 100px;
+      }
+
+      code {
+        font-size: calc(2vw + 2vh);
+        line-height: calc(2.2vw + 2.2vh);
+        overflow: hidden;
+        font-family: Menlo, monospace;
+        max-height: 1900px;
+        background-color: #191919;
+      }
     }
 
-    pre {
-      box-shadow: none;
-    }
 
     .neon {
       color: #f3fffd;
